--- a/html/gptapi.css
+++ b/html/gptapi.css
@@ -3,27 +3,29 @@ body {
 }
 
 .chat-container {
-    max-width: 400px;
+    max-width: 1000px;
     margin: 0 auto;
     padding: 20px;
-    border: 1px solid #ccc;
+    border: none;
     border-radius: 10px;
 }
 
 .chat-bubble {
-    background-color: #f1f1f1;
+    background-color: #aeeff0;
+    color: #000000;
     padding: 10px;
     margin-bottom: 10px;
     border-radius: 10px;
 }
 
 .user-bubble {
-    background-color: #e2f7fd;
+    background-color: #b8c3ff;
+    color: #000000;
     text-align: right;
 }
 
 .bot-bubble {
-    background-color: #f1f1f1;
+    background-color: #eaeaea;
     text-align: left;
 }
 
@@ -31,15 +33,15 @@ body {
     width: 100%;
     padding: 8px;
     box-sizing: border-box;
-    border: 1px solid #ccc;
+    border: 1px solid #1c1c1c;
     border-radius: 5px;
 }
 
 .send-button {
     margin-top: 10px;
     padding: 8px 16px;
-    background-color: #4CAF50;
-    color: white;
+    background-color: #2a2a2a;
+    color: rgb(255, 255, 255);
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -59,14 +61,5 @@ body {
 
 #loader {
     font-size: 25px;
-    text-align: center;
-}
-
-.kakao-ad {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
-    min-width: 350px;
-    min-height: 200px;
+    text-align: left;
 }
